--- a/lesetraining/.settings/org.eclipse.wst.common.component
+++ b/lesetraining/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,7 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/.apt_generated"/>
         <property name="context-root" value="lesetraining"/>
         <property name="java-output-path" value="/lesetraining/target/lesetraining-0.1.0.BUILD-SNAPSHOT/WEB-INF/classes"/>
     </wb-module>
